# stars-rust

./: Cargo.toml  README.md
src/: main.rs  planet.rs  planets.rs  solar_system.rs  space.rs
src/components/: galaxy.rs  mod.rs  named.rs
src/systems/: hello.rs  mod.rs  movement.rs  names.rs
