[package]
name = "stars-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = { git = "https://github.com/linebender/druid.git" }
iced = { version = "0.4", features = ["canvas", "tokio", "debug", "glow"]}
# iced = { git = "https://github.com/iced-rs/iced", features = ["canvas", "tokio", "debug", "glow"]}
rand = "0.8.5"
specs = { version = "0.18.0", features = ["specs-derive"] }